--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,365 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@200;300;400;600;700;800;900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root {
+  --color-primary: rgb(15, 89, 193);
+  --color-primary-variant: rgb(11, 175, 207);
+
+  --color-gray-0: #fff;
+  --color-gray-100: #eee;
+  --color-gray-200: #fcc;
+  --color-gray-300: #bbb;
+  --color-gray-400: #999;
+  --color-gray-500: #777;
+  --color-gray-600: #555;
+  --color-gray-700: #311;
+  --color-gray-800: #111;
+  --color-gray-900: #000;
+  --color-danger: rgb(246, 67, 67);
+  --color-success: rgb(6, 164, 101);
+
+  --radius-1: 0.4rem;
+  --radius-2: 0.8rem;
+  --radius-3: 1.2rem;
+  --radius-4: 1.6rem;
+  --radius-5: 2.0rem;
+
+  --container-w-lg: 80%;
+  --container-w-sm : 94%;
+
+  --transition: all 300ms ease;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    text-decoration: none;
+    border: 0;
+    box-sizing: border-box;
+}
+
+.dark {
+  --color-gray-0: #0e0d14;
+  --color-gray-100: #2f2b42;
+  --color-gray-200: #45405e;
+  --color-gray-300: #7b7b7b;
+  --color-gray-400: #919191;
+  --color-gray-500: #a1a1a1;
+  --color-gray-600: #c0c0c6;
+  --color-gray-700: #e6e5e5;
+  --color-gray-800: #fafafa;
+  --color-gray-900: #fff;
+}
+
+
+body {
+    font-family: "Montserrsat",sans-serif;
+    font-size: 0.9rem;
+    background-color: var(--color-gray-100);
+    color: var(--color-gray-700);
+    line-height: 1.6;
+}
+
+.container{
+    width: var(--container-w-lg);
+    margin-inline: auto;
+
+}
+
+h1, h2, h3, h4, h5, h6{
+    line-height: 1.1;
+    color: var(--color-gray-900);
+    text-transform: uppercase;
+    font-weight: 800;
+}
+
+h1 {
+    font-size: 1.6rem;
+}
+
+h2 {
+    font-size: 1.3rem;
+}
+
+h3 {
+   font-size: 1.1rem;
+}
+
+h4 {
+    font-size: 0.9rem;
+}
+
+h5 {
+    font-size: 0.75rem;
+}
+
+h6 {
+    font-size: 0.6rem;
+}
+
+a { 
+   font-size: 0.8rem;
+}
+
+img {
+    display: none;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+button {
+    cursor: pointer;
+}
+
+.btn {
+    width: fit-content;
+    background-color: var(--color-gray-100);
+    color: var(--color-gray-700);
+    font-weight: 600;
+    padding: 1rem 2rem;
+    text-align: center;
+    border-radius: var(--radius-1);
+    transition: var(--transition);
+}
+
+.btn.primary {
+    background-color: var(--color-primary);
+    color: white;
+}
+
+.btn.danger {
+    background-color:var(--color-danger);
+    color: white;
+}
+
+.btn.sm {
+    padding: 0.5rem 1.2rem;
+}
+
+.btn.full {
+    width: 100%;
+}
+
+.btn:hover{
+    background-color: var(--color-gray-900);
+    color: var(--color-gray-0);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*=============ERROR PAGE=============*/
+.errorPage{
+    display:grid;
+    place-items: center;
+    height: 100vh;
+    width: 100vw;
+    background-color: var(--color-gray-0);
+}
+
+.errorPage__container{
+    width: 30rem;
+    text-align: center;
+}
+
+
+.errorPage__container h1 {
+      font-size: 4rem;
+}
+
+
+
+
+
+
+
+
+
+/*============= NAVBAR =============*/
+nav {
+   background: var(--color-primary);
+   display: grid;
+   place-items: center;
+   height:  3rem;
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100vw;
+   z-index:1;
+}
+
+.nav_container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
+}
+
+.nav_container * {
+  color: white;
+}
+
+.nav_container div{
+    display: flex;
+    align-items: center;
+    gap : 4rem;
+}
+
+.nav_logo{
+    font-size: 1.2rem;
+    font-weight: 700;
+
+}
+
+.nav__toggle-btn {
+    background: transparent;
+    font-size: 1.8rem;
+    display:  none;
+}
+
+.nav_container a{
+    transition: var(--transition);
+}
+.nav_container a:hover{
+    color: var(--color-primary-variant);
+}
+
+.nav_container menu{
+    display: flex;
+    align-items: center;
+    gap: 4rem;
+}
+
+.theme__toggle-btn{
+   background: transparent;
+   font-size: 1.5rem;
+   display: flex;
+   transition: var(--transition);
+}
+
+.theme__toggle-btn:hover{
+    opacity: 0.75;
+}
+
+
+/*============= REGISTER =============*/
+.register {
+  display: grid;
+  place-items: center;
+  height: 100vh;
+}
+.register__container {
+  width: 35rem;
+  background: var(--color-gray-0);
+  padding: 3rem;
+  border-radius: var(--radius-5);
+}
+
+.register__container H2{
+    margin-bottom: 2rem;
+    color: var(--color-primary);
+}
+
+.register form {
+    display: flex;
+    flex-direction: column;
+    gap : 1.5rem;
+
+}
+
+.register form input{
+    padding: 0.7rem;
+    background: var(--color-gray-100);
+    border-radius: var(--radius-1);
+    color: var(--color-gray-900);
+}
+
+.register form p > a{
+   color: var(--color-primary);
+   font-weight: 500;
+}
+
+
+.form__error-message{
+    background: var(--color-danger);
+    color: var(--color-gray-0);
+    padding: 0.6rem 1.5rem;
+    border-radius: var(--radius-1);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*============= media queries =============*/
+@media screen and (max-width: 600px) {
+    .container {
+        width: var(--container-w-sm);
+    }
+
+    nav {
+        height:  4rem;
+    }
+
+    .nav_container div {
+        gap: 3rem;
+    }
+
+    .nav__toggle-btn {
+        display: inline-block;
+    }
+
+    .nav_container menu {
+        position: fixed;
+        top:  4rem;
+        right:  0;
+        flex-direction: column;
+        gap : 0;
+        width: 12rem;
+
+    }
+    .nav_container menu a {
+        background: var(--color-gray-0);
+        color: var(--color-gray-900);
+        border-bottom: 1px solid var(--color-gray-200);
+        width: 100%;
+        display: grid;
+        place-items: center;
+        height:  4rem;
+        box-shadow: -2rem 4rem 2rem rgba( 0, 0, 0, 0.1)
+
+    }
+
+    .errorPage__container{
+        width: 100%;
+    }
 }
